--- a/style.css
+++ b/style.css
@@ -15,9 +15,22 @@
     background: #3a4452;
     padding: 20px;
     border-radius: 10px;
-    margin-bottom: 500px;
+    margin-bottom: 300px;
     margin-right: 150px;
 }
 body {
     background: linear-gradient(135deg, #153677, #4e085f); 
+}
+.calculator form input{
+    border: 0;
+    outline: 0;
+    width: 60px;
+    height: 60px;
+    border-radius: 10px;
+    box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.2);
+    background: transparent;
+    font-size: 20px;
+    color: #fff;
+    cursor: pointer;
+    margin: 10px;
 }
