--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@
     background: #3a4452;
     padding: 20px;
     border-radius: 10px;
-    margin-bottom: 300px;
-    margin-right: 150px;
+    margin-bottom: 450px;
+    margin-right: 120px;
 }
 body {
     background: linear-gradient(135deg, #153677, #4e085f); 
@@ -33,4 +33,10 @@ body {
     color: #fff;
     cursor: pointer;
     margin: 10px;
+}
+.name{
+    margin-left: 600px;
+    margin-top: 100px;
+    font-size: 100px;
+    color: green;
 }
